--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <link rel="stylesheet" href="lib/mapbox-gl/mapbox-gl.css" />
+    <link rel="stylesheet" href="lib/leaflet/leaflet.css" />
     <link rel="stylesheet" href="assets/stylesheets/global.css" />
 
     <title>Carte imaginaire des transports à Marseille</title>
@@ -13,14 +13,14 @@
       <div id="map"></div>
     </main>
 
-    <script src="lib/mapbox-gl/mapbox-gl.js"></script>
+    <script src="lib/leaflet/leaflet.js"></script>
 
     <script type="text/javascript">
-      window.ACCESS_TOKEN = 'pk.eyJ1IjoibWF0dGlzZyIsImEiOiJjazg2MmdrcTAwNGE1M2dwNzFiaW01Z2hzIn0.GWi6clQEOgnLDkBPIUJhHQ';
-
       window.START_ZOOM_LEVEL = 11;
-      window.START_CENTER = [ 5.38, 43.3 ];
+      window.START_CENTER = [ 43.3, 5.38 ];
     </script>
+
+    <script src='//api.tiles.mapbox.com/mapbox.js/plugins/leaflet-omnivore/v0.3.1/leaflet-omnivore.min.js'></script>
 
     <script src="assets/javascripts/application.js" type="text/javascript" charset="utf-8" async defer></script>
   </body>
