Include dependency manually

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       window.START_CENTER = [ 43.3, 5.38 ];
     </script>
 
-    <script src='//api.tiles.mapbox.com/mapbox.js/plugins/leaflet-omnivore/v0.3.1/leaflet-omnivore.min.js'></script>
+    <script src="lib/leaflet-omnivore-v0.3.1.min.js"></script>
 
     <script src="assets/javascripts/application.js" type="text/javascript" charset="utf-8" async defer></script>
   </body>
