Get circle radius from query parameter

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script type="text/javascript">
       window.START_ZOOM_LEVEL = 11;
       window.START_CENTER = [ 43.3, 5.38 ];
+      window.CIRCLE_RADIUS = new URLSearchParams(window.location.search).get('rayon') || 200;
     </script>
 
     <script src="lib/leaflet-omnivore-v0.3.1.min.js"></script>
