Support downloading data as GeoJSON

--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
     <script type="text/javascript">
       window.START_ZOOM_LEVEL = 11;
       window.START_CENTER = [ 43.3, 5.38 ];
-      window.CIRCLE_RADIUS = new URLSearchParams(window.location.search).get('rayon') || 200;
+      window.CIRCLE_RADIUS = Number(new URLSearchParams(window.location.search).get('rayon')) || 200;
     </script>
 
     <script src="lib/leaflet-omnivore-v0.3.1.min.js"></script>
+    <script src="lib/circleToPolygon.js" type="text/javascript"></script>
 
     <script src="assets/javascripts/application.js" type="text/javascript" charset="utf-8" async defer></script>
   </body>
